
2010-03-26 [Bld75]

- Bugfix      : correct address range for M16C bit short addressing

2010-04-11 [Bld76]

- Bugfix      : correct operand checking for SHA/SHL on M16C

2010-04-17 [Bld77]

- Bugfix      : address problem of overlapping strcpy()

2010-06-14 [Bld78] 

- Bugfix      : do not optimize out 68K BSR if it has zero distance

2010-12-12 [Bld79]

- Bugfix      : correct back-transformation of SFR addresses to absolute for 80C167

- Bugfix      : allow arbitrary values for register pointer on eZ8

- Change      : split up Mico8 variants

2011-08-01 [Bld80]

- Change      : rework (e)Z8 working register addressing

2011-10-20 [Bld81]

- Change      : range checking of RP value for Z8 more graceful

2012-01-21 [Bld82]

- Addition    : added support for MPC 821 from Marcin Cieslak

- Bugfix      : regard symbol name expansion in arguments for SHARED

2012-05-26 [Bld83]

- Change      : implicit macro parameters are always case-insensitive

- Addition    : add REG instruction to MSP430

2012-09-02 [Bld84]

- Addition    : add support for XMOS XS1

- Addition    : optionally support UTF8 encoding

- Addition    : add Makefile definitions for OSX

2012-12-09 [Bld85]

- Change      : allow register symbols for Zilog Z8

2012-12-31 [Bld86]

- Change      : add Dx pseudo instructions to Signetics 2650

2013-03-09 [Bld87]

- Bugfix      : correct PC-relative addressing on SC/MP

- Addition    : (NO)GLOBALSYMBOLS parameter for macros

- Addition    : add support for NEC uPD75xx

2013-03-22 [Bld88]

- Addition    : support 75xx instruction set A & B

2013-08-07 [Bld89]

- Bugfix      : PADDING instruction available for 6805/6808

- Addition    : add COP440 target

- Bugfix      : better handling of overlong souce code lines

2013-12-21 [Bld90]

- Bugfix      : IRPC messed up local symbol handling

- Bugfix      : correct handling of escaped quotes in string constants

- Change      : allow up to 64K code per line