@@ -46,7 +46,7 @@
 
 \vspace{1cm}\par
 
-{\large Stand M"arz 2013}
+{\large Stand M"arz 2014}
 \end{raggedright}
 
 \clearpage
@@ -3326,7 +3326,7 @@ Befehlssatz existieren, die nach Bedarf hinzukommen werden.  Es ist eben
 ein Anfang, und die Dokumentation von National ist ziemlich umfangreich...
 %%-----------
 \begin{quote}
-bg) COP410 $\rightarrow$ COP420
+bg) COP410 $\rightarrow$ COP420 $\rightarrow$ COP440 $\rightarrow$ COP444
 Die COP42x-Derivate bieten einige weitere Befehle, des weiteren wurden
 Befehlen in ihrem Wertebereich erweitert.
 \end{quote}
@@ -4376,9 +4376,10 @@ Attribute gibt es deswegen wie bei \tty{DC} auch hier nicht.
 \ttindex{DB}\ttindex{DW}\ttindex{DD}\ttindex{DQ}\ttindex{DT}
 
 {\em\begin{tabbing}
-G"ultigkeit: \= Intel, Zilog, Toshiba, NEC, TMS370, Siemens, AMD, M16(C),\\
-             \> MELPS7700/65816, National, ST9, TMS7000, $\mu$PD77230, \\
-             \> Signetics, Fairchild, Intersil, XS1
+G"ultigkeit: \= Intel (au"ser 4004/4040), Zilog, Toshiba, NEC, TMS370,\\
+             \> Siemens, AMD, M16(C), MELPS7700/65816, National, ST9,\\
+             \> TMS7000, $\mu$PD77230, Signetics, Fairchild, Intersil,\\
+             \> XS1
 \end{tabbing}}
 
 Diese Befehle stellen sozusagen das Intel-Gegenst"uck zu \tty{DS}
