@@ -65,7 +65,7 @@
 
 \vspace{1cm}\par
 
-{\large Edition March 2013}
+{\large Edition March 2014}
 \end{raggedright}
 
 \clearpage
@@ -3236,7 +3236,7 @@ instruction sets which will be added when a need occurs.  It is a
 beginning, and National's documentation is quite extensive... 
 %%-----------
 \begin{quote}
-bg) COP410 $\rightarrow$ COP420
+bg) COP410 $\rightarrow$ COP420 $\rightarrow$ COP440 $\rightarrow$ COP444
 The COP42x derivates offer some additional instructions, plus other
 instructions have an extended operand range.
 \end{quote}  
@@ -4248,9 +4248,10 @@ attributes therefore do not exist just as in the case of \tty{DC}.
 \ttindex{DB}\ttindex{DW}\ttindex{DD}\ttindex{DQ}\ttindex{DT}
 
 {\em\begin{tabbing}
-valid for: \= Intel, Zilog, Toshiba, NEC, TMS370, Siemens, AMD, \\
-           \> MELPS7700/65816, M16(C), National, ST9, TMS70Cxx, \\
-           \> Signetics, $\mu$PD77230, Fairchild, Intersil, XS1
+valid for: \= Intel (except for 4004/4040), Zilog, Toshiba,\\
+           \> NEC, TMS370, Siemens, AMD, MELPS7700/65816,\\
+           \> M16(C), National, ST9, TMS70Cxx, Signetics,\\
+           \> $\mu$PD77230, Fairchild, Intersil, XS1
 \end{tabbing}}
 
 These commands are - one could say - the Intel counterpart to \tty{DS} and
